[tool.poetry]
name = "ethos-tds"
version = "0.1.0"
description = ""
authors = ["rchan <rchan@turing.ac.uk>"]
readme = "README.md"
packages = [{include = "ethos_tds"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
jupyter = "^1.0.0"
nltk = "^3.7"
spacy = "^3.4.3"
gensim = "^4.2.0"
scikit-learn = "^1.1.3"
umap-learn = "^0.5.3"
torch = "2.0.0"
transformers = "^4.24.0"
sentence-transformers = "^2.2.2"
xgboost = "^1.7.1"
bertopic = "^0.15.0"
openai = "^0.27.8"
accelerate = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
